--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <body>
 
 <h1>3rd year software enginnering students</h1>
-<p>. students of software enginnering specialy 3rd year they are so geniuos  and they dont want to learn .</p>
+<p>. students of software enginnering specialy 2nd year they are so geniuos  and they want to learn .</p>
 
 </body>
 </html>
